--- a/model.tex
+++ b/model.tex
@@ -447,12 +447,12 @@ II型 & 482.3 & 445 & 214,424 & 45.5\% \\
 
 \vspace{1.5em}
 \paragraph{4、空间分布可视化}
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.7\linewidth]{b7d6821c0a15befa805836d0daf2d0db.png}
-    \caption{供水管网空间分布示意图}
-    \label{fig:pipeline-distribution}
-\end{figure}
+% \begin{figure}[H]
+%     \centering
+%     \includegraphics[width=0.7\linewidth]{b7d6821c0a15befa805836d0daf2d0db.png}
+%     \caption{供水管网空间分布示意图}
+%     \label{fig:pipeline-distribution}
+% \end{figure}
 \FloatBarrier
 
 \section*{六、模型评价与推广}
